<resources>

    <string name="app_name">quickApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Press Menu For More</string>

    <string name="none"></string>
    <string name="static_list">See Static List</string>
    <string name="make_call"> Call This Number </string>
    <string name="service"> See Services </string>
    <string name="start"> Start this Crappy Service</string>
    <string name="stop"> STOP!!!!</string>
    
    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="phone">Phone Number:</string>
    
     <string name="first_hint">Enter Your First Name</string>
     <string name="last_hint">Enter Your Last Name</string>
     <string name="phone_hint">12223334444</string>
     <string name="button_add">Add Contact</string>
     
     <string name="start_serv">Start Service</string>
     <string name="stop_serv">Stop Service</string>
     <string name="to_mylist">See Static List</string>
</resources>