<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/see_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#FFFF00"
            android:text="@string/static_list"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/see_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:background="#FFFF00"
            android:text="@string/service"
            android:textColor="#000000"
            android:textSize="20sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="341dp" >
    </ListView>

    <Button
        android:id="@+id/add_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />

</LinearLayout>